# agentic_frameworks

./: pyproject.toml
crewai/chatbot_ui/: README.md  pyproject.toml
crewai/chatbot_ui/src/chatbot_ui/: crew.py  main.py  new_main.py
crewai/chatbot_ui/src/chatbot_ui/config/: agents.yaml  tasks.yaml
crewai/shopping_assistant/: .gitignore  README.md  pyproject.toml
crewai/shopping_assistant/src/shopping_assistant/: crew.py  main.py
crewai/shopping_assistant/src/shopping_assistant/config/: agents.yaml  tasks.yaml
crewai/steering_flow/: README.md  pyproject.toml
crewai/steering_flow/src/steering_flow/: main.py
crewai/steering_flow/src/steering_flow/crews/my_agentic_system/: README.md  pyproject.toml
crewai/steering_flow/src/steering_flow/crews/my_agentic_system/src/my_agentic_system/: crew.py  main.py
crewai/steering_flow/src/steering_flow/crews/my_agentic_system/src/my_agentic_system/config/: agents.yaml  tasks.yaml
crewai/steering_flow/src/steering_flow/crews/superego/: README.md  pyproject.toml
crewai/steering_flow/src/steering_flow/crews/superego/src/superego/: crew.py  main.py
crewai/steering_flow/src/steering_flow/crews/superego/src/superego/config/: agents.yaml  tasks.yaml
crewai/websearch_agent/: README.md  pyproject.toml
crewai/websearch_agent/src/websearch_agent/: crew.py  main.py
crewai/websearch_agent/src/websearch_agent/config/: agents.yaml  tasks.yaml
crewai/websearch_agent/src/websearch_agent/tools/: custom_tool.py
