[project]
name = "agentic-frameworks"
version = "0.1.0"
description = ""
authors = [
    {name = "Preeti Ravindra"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai (>=0.98.0,<0.99.0)",
    "agentops (>=0.3.26,<0.4.0)",
    "langchain (>=0.3.15,<0.4.0)",
    "crewai-tools (>=0.32.1,<0.33.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
