[project]
name = "shopping_assistant"
version = "0.1.0"
description = "shopping_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0"
]

[project.scripts]
shopping_assistant = "shopping_assistant.main:run"
run_crew = "shopping_assistant.main:run"
train = "shopping_assistant.main:train"
replay = "shopping_assistant.main:replay"
test = "shopping_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
