[project]
name = "superego"
version = "0.1.0"
description = "superego using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
superego = "superego.main:run"
run_crew = "superego.main:run"
train = "superego.main:train"
replay = "superego.main:replay"
test = "superego.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
